gcc/testsuite/rust/rustc/ui/liveness/liveness-closure-require-ret.rs
fn force<F>(f: F) -> isize where F: FnOnce() -> isize { f() }
fn main() { println!("{}", force(|| {})); } // { dg-error ".E0308." "" { target *-*-* } }

